# crialt

./: .gitignore  docker-compose.yml  readme.md  tipografia.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2c600628c868_initial_migration.py  92b25a1995e4_add_username_to_user.py  99a9c5d56391_initial_migration.py  add_admin_user.py  add_fake_clients_and_projects.py  de8db172030b_permite_campo_senha_do_cliente_ser_nulo.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  clients.py  dashboard.py  dependencies.py  files.py  projects.py  router.py  stage_types.py  stages.py  tasks.py  users.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  security.py
backend/app/models/: __init__.py  chunked_upload.py  client.py  file.py  project.py  stage.py  stage_type.py  task.py  user.py
backend/app/schemas/: __init__.py  chunked_upload.py  client.py  file.py  project.py  stage.py  stage_type.py  task.py  user.py
backend/app/services/: __init__.py  auth_service.py  client_service.py  dashboard_service.py  file_service.py  project_service.py  stage_type_service.py  task_service.py  user_service.py
backend/app/utils/: __init__.py  cache.py  constants.py  validators.py
backend/tests/: __init__.py
frontend/: Dockerfile  angular.json  nginx.conf  package.json  tsconfig.app.json  tsconfig.json  tsconfig.server.json
frontend/src/: index.html  main.server.ts  main.ts  polyfills.ts  server.ts  styles.scss
(+128 files in other folders)
